Added block_id & block_value to the verify endpoint when verifying a proof
* Code change to include block_id and block_value in the anchor branches of a proof
* Updated Swagger definition
* Pending: Update chainpoint-node Wiki. This change will be made right before a new chainpoint release.

[Finishes #161104685]
