# lib/endpoints/verify.js
@@ -66,7 +66,9 @@ async function ProcessVerifyTasksAsync(verifyTasks) {
         let anchorResult = {
           branch: anchor.branch || undefined,
           type: anchor.anchor.type,
-          valid: confirmResult
+          valid: confirmResult,
+          block_id: anchor.anchor.anchor_id,
+          block_value: anchor.anchor.expected_value,
         }
         totalCount++
         validCount = validCount + (anchorResult.valid === true ? 1 : 0)
@@ -257,6 +259,7 @@ function flattenExpectedValues(branchArray) {
     if (branchArray[b].branches) {
       results = results.concat(flattenExpectedValues(branchArray[b].branches))
     }
+
     return results
   }
 }
