# swagger.yaml
@@ -232,7 +232,7 @@ definitions:
   PostHashResponse:
     type: object
     properties:
-      meta:     
+      meta:
        type: object
        properties:
         submitted_at:
@@ -250,7 +250,7 @@ definitions:
               type: string
               format: 'date-time'
               example: '2017-05-02T15:27:44Z'
-            btc: 
+            btc:
               type: string
               format: 'date-time'
               example: '2017-05-02T16:17:44Z'
@@ -262,7 +262,7 @@ definitions:
           hash_id_node:
             type: string
             example: '5a001650-2f4a-11e7-ad22-37b426116bc4'
-          hash: 
+          hash:
             type: string
             example: '11cd8a380e8d5fd3ac47c1f880390341d40b11485e8ae946d8fa3d466f23fe89'
   GetProofsResponse:
@@ -300,7 +300,7 @@ definitions:
     properties:
       proof_index:
         type: integer
-        example: 0          
+        example: 0
       hash:
         type: string
         example: '112233ab12ab12ab12ab12ab12ab12ab12ab12ab12ab12ab11'
@@ -310,7 +310,7 @@ definitions:
       hash_submitted_node_at:
         type: string
         format: 'date-time'
-        example: '2017-06-11T18:53:18Z'       
+        example: '2017-06-11T18:53:18Z'
       hash_id_core:
         type: string
         example: '3bce9920-4ed7-11e7-a7d0-3d6269e334e8'
@@ -329,9 +329,15 @@ definitions:
             type:
               type: string
               example: 'cal'
-            valid: 
+            valid:
               type: 'boolean'
               example: true
+            block_id:
+              type: 'string'
+              example: "2133282"
+            block_value:
+              type: 'string'
+              example: "717c0c127eff7e65fc21ef8d72e42d994c6cab07245509bb3229957f7e67c6e3"
       status:
         type: string
         example: 'verified'
@@ -340,7 +346,7 @@ definitions:
     properties:
       id:
         type: integer
-        example: 729          
+        example: 729
       time:
         type: integer
         example: 1497225912859
@@ -376,10 +382,10 @@ definitions:
     example: 'b387600e023670fa8c7cac9689d8d8aa212c681c0b0d9d5a86c53acea0f25c48'
   GetConfigResponse:
     type: object
-    properties:    
+    properties:
       version:
         type: string
-        example: '1.0.0'    
+        example: '1.0.0'
       proof_expire_minutes:
         type: integer
         example: 1440
